# wakeword-forge

./: .gitignore  CHANGELOG.md  CITATION.cff  COMMERCIAL.md  CONTRIBUTING.md  DATA_PROVENANCE.md  Makefile  NOTICE  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  TRADEMARK.md  pyproject.toml
assets/: readme-workflow-diagram.mmd
docker/qwentts/: Dockerfile  docker-compose.yml  qwentts_clone_one.py
docs/: advanced-usage.md  architecture.md  architecture.mmd  planned-changes.md
forge/: __init__.py  audio.py  augmentation.py  cli.py  config.py  dashboard.py  negative_ingestion.py  negatives.py  recorder.py  synthesizer.py  update_check.py  voice_clone.py
forge/models/: wavlm_repcnn.py
tests/: test_augmentation.py  test_cli.py  test_cli_augmentation.py  test_config.py  test_dashboard_ux.py  test_dscnn.py  test_dscnn_trainer.py  test_human_review.py  test_makefile.py  test_negative_ingestion.py  test_negatives.py  test_package_namespace.py  test_project.py  test_public_release_hygiene.py  test_recorder.py  test_release_version.py  test_synthesizer.py  test_trainer.py  test_update_check.py  test_voice_clone.py  test_wavlm_repcnn_trainer.py
wakeword_forge/: __init__.py  audio.py  augmentation.py  cli.py  config.py  dashboard.py  negatives.py  project.py  recorder.py  review.py  synthesizer.py  trainer.py  update_check.py  voice_clone.py
wakeword_forge/models/: __init__.py  dscnn.py  dscnn_trainer.py
