[project]
name = "wakeword-forge"
version = "0.1.0"
description = "Train a personal wake-word detector from your own voice — runs on CPU, exports to ONNX."
authors = [{ name = "Hasan" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "torch>=2.1",
    "torchaudio>=2.1",
    "sounddevice>=0.4.6",
    "soundfile>=0.12",
    "numpy>=1.21,<2.4",
    "onnx>=1.15",
    "onnxruntime>=1.17",
    "rich>=13.0",               # terminal UI
    "typer>=0.12",              # CLI entrypoints
    "scikit-learn>=1.3",        # validation metrics
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.34",           # dashboard-first workflow
]
tts = [
    "kokoro-onnx>=0.4",         # lightweight CPU TTS (optional positives synth)
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
wakeword-forge = "wakeword_forge.cli:app"
wakeword-forge-dashboard = "wakeword_forge.dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
